Arreglado mayúscula en curso de Integración Continua

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <li>Vagrant</li>
             <li>Docker</li>
             <li>Ansible</li>
-            <li>Inntegración continua</li>
+            <li>Inntegración Continua</li>
         </ul>
     </body>
 </html>
